--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <nav>
             <div id="nav-left">
                 <div class="nav-logo">
-                    <a href="/"><img src="images/logo.svg" alt="Zerodha"></a>
+                    <a href="index.html"><img src="images/logo.svg" alt="Zerodha"></a>
                 </div>
             </div>
             <div id="nav-right">
                 <div id="nav-links">
                     <ul>
-                        <li><a href="/">Signup</a></li>
-                        <li><a href="/">About</a></li>
-                        <li><a href="/">Products</a></li>
-                        <li><a href="/">Pricing</a></li>
-                        <li><a href="/">Support</a></li>
+                        <li><a href="index.html">Signup</a></li>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="index.html">Products</a></li>
+                        <li><a href="index.html">Pricing</a></li>
+                        <li><a href="index.html">Support</a></li>
                     </ul>
                 </div>
 
@@ -44,39 +44,39 @@
                 <div id="nav-menu">
                     <div id="nav-menu-top">
                         <ul>
-                            <li><a href="/">Signup</a></li>
-                            <li><a href="/">About</a></li>
-                            <li><a href="/">Products</a></li>
-                            <li><a href="/">Pricing</a></li>
-                            <li><a href="/">Support</a></li>
+                            <li><a href="index.html">Signup</a></li>
+                            <li><a href="index.html">About</a></li>
+                            <li><a href="index.html">Products</a></li>
+                            <li><a href="index.html">Pricing</a></li>
+                            <li><a href="index.html">Support</a></li>
                         </ul>
                     </div>
                     <div id="nav-menu-middle">
-                        <a href="/" class="kite box">
+                        <a href="index.html" class="kite box">
                             <img src="images/kite-logo.svg" alt="Kite">
                             <h3>Kite</h3>
                             <p>Trading platform</p>
                         </a>
-                        <a href="/" class="console box">
+                        <a href="index.html" class="console box">
                             <img src="images/console.svg" alt="Console">
                             <h3>Console</h3>
                             <p>Backoffice</p>
                         </a>
-                        <a href="/" class="kite-connect box">
+                        <a href="index.html" class="kite-connect box">
                             <img src="images/kite-connect.svg" alt="Kite Connect">
                             <h3>Kite Connect</h3>
                             <p>Trading APIs</p>
                         </a>
-                        <a href="/" class="coin box">
+                        <a href="index.html" class="coin box">
                             <img src="images/coin.svg" alt="Coin">
                             <h3>Coin</h3>
                             <p>Mutual Funds</p>
                         </a>
-                        <a href="/" class="varsity box">
+                        <a href="index.html" class="varsity box">
                             <img src="images/varsity.png" alt="Varsity">
                             <h3>Varsity</h3>
                         </a>
-                        <a href="/" class="tqna box">
+                        <a href="index.html" class="tqna box">
                             <img src="images/tqna.png" alt="Trading Q&A">
                             <h3>Trading Q&A</h3>
                         </a>
@@ -85,25 +85,25 @@
                     <div id="nav-menu-bottom">
                         <div class="utilities box">
                             <h3>Utilities</h3>
-                            <a href="/">Brokerage calculator</a>
-                            <a href="/">Margin calculator</a>
-                            <a href="/">Holiday calendar</a>
+                            <a href="index.html">Brokerage calculator</a>
+                            <a href="index.html">Margin calculator</a>
+                            <a href="index.html">Holiday calendar</a>
                         </div>
                         <div class="updates box">
                             <h3>Updates</h3>
-                            <a href="/">Z-Connect blog</a>
-                            <a href="/">Plus News</a>
-                            <a href="/">Circular / Bulletin</a>
-                            <a href="/">IPOs</a>
+                            <a href="index.html">Z-Connect blog</a>
+                            <a href="index.html">Plus News</a>
+                            <a href="index.html">Circular / Bulletin</a>
+                            <a href="index.html">IPOs</a>
                         </div>
                         <div class="education box">
                             <h3>Education</h3>
                             <div class="box-cont">
-                                <a href="/" class="inside-box-cont">
+                                <a href="index.html" class="inside-box-cont">
                                     <img src="images/varsity.png" alt="Varsity">
                                     <p>Varsity</p>
                                 </a>
-                                <a href="/" class="inside-box-cont">
+                                <a href="index.html" class="inside-box-cont">
                                     <img src="images/tqna.png" alt="Trading Q&A">
                                     <p>Trading Q&A</p>
                                 </a>
@@ -167,11 +167,11 @@
                     tailored to specific needs, built from the ground up</p>
             </div>
             <div class="ecosystem-img">
-                <a href="/"><img src="images/ecosystem.png" alt=""></a>
+                <a href="index.html"><img src="images/ecosystem.png" alt=""></a>
             </div>
             <div class="secondary-btns">
-                <a href="/">Explore our products <i class="fa-solid fa-arrow-right-long"></i></a>
-                <a href="/">Try Kite demo <i class="fa-solid fa-arrow-right-long"></i></a>
+                <a href="index.html">Explore our products <i class="fa-solid fa-arrow-right-long"></i></a>
+                <a href="index.html">Try Kite demo <i class="fa-solid fa-arrow-right-long"></i></a>
             </div>
         </section>
         <!-----**** Ecosystem Section Ended ****----->
@@ -183,7 +183,7 @@
                 <p class="secondary-para">We pioneered the concept of discount broking and price transparency in India.
                     Flat fees and no hidden charges.</p>
                 <div class="secondary-btns">
-                    <a href="/">See pricing <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <a href="index.html">See pricing <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
             </div>
             <div class="pricing-box">
@@ -202,19 +202,19 @@
         <!-----**** Education Section Started ****----->
         <section id="education">
             <div class="education-img">
-                <a href="/"><img src="images/education.svg" alt="Education"></a>
+                <a href="index.html"><img src="images/education.svg" alt="Education"></a>
             </div>
             <div class="education-txt">
                 <h2 class="secondary-heading">Free and open market education</h2>
                 <p class="secondary-para">Varsity, the largest online stock market education book in the world covering
                     everything from the basics to advanced trading.</p>
                 <div class="secondary-btns">
-                    <a href="/">Varsity <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <a href="index.html">Varsity <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <p class="secondary-para">TradingQ&A, the most active trading and investment community in India for all
                     your market related queries.</p>
                 <div class="secondary-btns">
-                    <a href="/">TradingQ&A <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <a href="index.html">TradingQ&A <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
             </div>
         </section>
@@ -239,45 +239,45 @@
                 <img src="images/logo.svg" alt="Zerodha">
                 <p>&copy; 2010 - 2023, Zerodha Broking Ltd. All rights reserved.</p>
                 <ul class="social-links">
-                    <li><a href="/"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="/"><i class="fa-brands fa-square-facebook"></i></a></li>
-                    <li><a href="/"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                    <li><a href="/"><i class="fa-brands fa-telegram"></i></a></li>
+                    <li><a href="index.html"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="index.html"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href="index.html"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="index.html"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="index.html"><i class="fa-brands fa-telegram"></i></a></li>
                 </ul>
             </div>
             <div class="box">
                 <h3>Company</h3>
                 <ul class="links">
-                    <li><a href="/">About</a></li>
-                    <li><a href="/">Products</a></li>
-                    <li><a href="/">Pricing</a></li>
-                    <li><a href="/">Referral Programme</a></li>
-                    <li><a href="/">Careers</a></li>
-                    <li><a href="/">Zerodha.tech</a></li>
-                    <li><a href="/">Press & media</a></li>
-                    <li><a href="/">Zerodha Cares (CSR)</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Products</a></li>
+                    <li><a href="index.html">Pricing</a></li>
+                    <li><a href="index.html">Referral Programme</a></li>
+                    <li><a href="index.html">Careers</a></li>
+                    <li><a href="index.html">Zerodha.tech</a></li>
+                    <li><a href="index.html">Press & media</a></li>
+                    <li><a href="index.html">Zerodha Cares (CSR)</a></li>
                 </ul>
             </div>
             <div class="box">
                 <h3>Support</h3>
                 <ul class="links">
-                    <li><a href="/">Contact us</a></li>
-                    <li><a href="/">Support portal</a></li>
-                    <li><a href="/">Z-Connect blog</a></li>
-                    <li><a href="/">List of charges</a></li>
-                    <li><a href="/">Downloads & resources</a></li>
-                    <li><a href="/">Videos</a></li>
-                    <li><a href="/">Market overview</a></li>
-                    <li><a href="/">How to file a complaint?</a></li>
-                    <li><a href="/">Status of your complaints</a></li>
+                    <li><a href="index.html">Contact us</a></li>
+                    <li><a href="index.html">Support portal</a></li>
+                    <li><a href="index.html">Z-Connect blog</a></li>
+                    <li><a href="index.html">List of charges</a></li>
+                    <li><a href="index.html">Downloads & resources</a></li>
+                    <li><a href="index.html">Videos</a></li>
+                    <li><a href="index.html">Market overview</a></li>
+                    <li><a href="index.html">How to file a complaint?</a></li>
+                    <li><a href="index.html">Status of your complaints</a></li>
                 </ul>
             </div>
             <div class="box">
                 <h3>Account</h3>
                 <ul class="links">
-                    <li><a href="/">Open an account</a></li>
-                    <li><a href="/">Fund transfer</a></li>
+                    <li><a href="index.html">Open an account</a></li>
+                    <li><a href="index.html">Fund transfer</a></li>
                 </ul>
             </div>
         </div>
@@ -288,15 +288,15 @@
                 Trading through Zerodha Commodities Pvt. Ltd. MCX: 46025; NSE-50001 - SEBI Registration no.:
                 INZ000038238 Registered Address: Zerodha Broking Ltd., #153/154, 4th Cross, Dollars Colony, Opp.
                 Clarence Public School, J.P Nagar 4th Phase, Bengaluru - 560078, Karnataka, India. For any complaints
-                pertaining to securities broking please write to <a href="/">complaints@zerodha.com</a>, for DP related
-                to <a href="/">dp@zerodha.com</a>. Please ensure you carefully read the Risk Disclosure Document as
+                pertaining to securities broking please write to <a href="index.html">complaints@zerodha.com</a>, for DP related
+                to <a href="index.html">dp@zerodha.com</a>. Please ensure you carefully read the Risk Disclosure Document as
                 prescribed by SEBI | ICF
                 <br><br>
-                Procedure to file a complaint on <a href="/">SEBI SCORES</a>: Register on SCORES portal. Mandatory
+                Procedure to file a complaint on <a href="index.html">SEBI SCORES</a>: Register on SCORES portal. Mandatory
                 details for filing complaints on SCORES: Name, PAN, Address, Mobile Number, E-mail ID. Benefits:
                 Effective Communication, Speedy redressal of the grievances
                 <br><br>
-                <a href="/">Smart Online Dispute Resolution</a>
+                <a href="index.html">Smart Online Dispute Resolution</a>
                 <br><br>
                 Investments in securities market are subject to market risks; read all the related documents carefully
                 before investing.
@@ -316,21 +316,21 @@
                 sign the IPO application form to authorize your bank to make payment in case of allotment. In case of
                 non allotment the funds will remain in your bank account. As a business we don't give stock tips, and
                 have not authorized anyone to trade on behalf of others. If you find anyone claiming to be part of
-                Zerodha and offering such services, please <a href="/">create a ticket here</a>.
+                Zerodha and offering such services, please <a href="index.html">create a ticket here</a>.
             </p>
 
         </div>
         <div class="footer-bottom">
             <ul class="links">
-                <li><a href="/">NSE</a></li>
-                <li><a href="/">BSE</a></li>
-                <li><a href="/">MCX</a></li>
-                <li><a href="/">Terms & condition</a></li>
-                <li><a href="/">Policies and procedures</a></li>
-                <li><a href="/">Privacy policy</a></li>
-                <li><a href="/">Discloser</a></li>
-                <li><a href="/">For investor's attention</a></li>
-                <li><a href="/">Investor charter</a></li>
+                <li><a href="index.html">NSE</a></li>
+                <li><a href="index.html">BSE</a></li>
+                <li><a href="index.html">MCX</a></li>
+                <li><a href="index.html">Terms & condition</a></li>
+                <li><a href="index.html">Policies and procedures</a></li>
+                <li><a href="index.html">Privacy policy</a></li>
+                <li><a href="index.html">Discloser</a></li>
+                <li><a href="index.html">For investor's attention</a></li>
+                <li><a href="index.html">Investor charter</a></li>
             </ul>
         </div>
     </footer>
